<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/breedsFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/title_breeds" />

    <item
        android:id="@+id/usersFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_users" />

    <item
        android:id="@+id/postsFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/title_posts" />

    <item
        android:id="@+id/randomUsersFragment"
        android:icon="@android:drawable/ic_menu_week"
        android:title="@string/title_random_users" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/title_settings" />

</menu>
