<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/breedsFragment">

    <!-- Breeds -->
    <fragment
        android:id="@+id/breedsFragment"
        android:name="com.example.androidassessment.presentation.breeds.BreedsFragment"
        android:label="@string/title_breeds"
        tools:layout="@layout/fragment_breeds" />

    <!-- Users -->
    <fragment
        android:id="@+id/usersFragment"
        android:name="com.example.androidassessment.presentation.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_usersFragment_to_userDetailFragment"
            app:destination="@id/userDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/userDetailFragment"
        android:name="com.example.androidassessment.presentation.users.UserDetailFragment"
        android:label="@string/title_user_detail"
        tools:layout="@layout/fragment_user_detail">
        <argument
            android:name="userId"
            app:argType="integer" />
    </fragment>

    <!-- Posts -->
    <fragment
        android:id="@+id/postsFragment"
        android:name="com.example.androidassessment.presentation.posts.PostsFragment"
        android:label="@string/title_posts"
        tools:layout="@layout/fragment_posts">
        <action
            android:id="@+id/action_postsFragment_to_postDetailFragment"
            app:destination="@id/postDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/postDetailFragment"
        android:name="com.example.androidassessment.presentation.posts.PostDetailFragment"
        android:label="@string/title_post_detail"
        tools:layout="@layout/fragment_post_detail">
        <argument
            android:name="postId"
            app:argType="integer" />
    </fragment>

    <!-- Random Users -->
    <fragment
        android:id="@+id/randomUsersFragment"
        android:name="com.example.androidassessment.presentation.randomusers.RandomUsersFragment"
        android:label="@string/title_random_users"
        tools:layout="@layout/fragment_random_users" />

    <!-- Settings -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.androidassessment.presentation.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
